--- a/HvZ_p/AndroidManifest.xml
+++ b/HvZ_p/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:icon="@drawable/ic_hvz"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar">"
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:label="@string/app_name"
             android:name=".HvZ_Activity" >
