--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ HvZ/bin
 HvZ/bin/*
 HvZ/.classpath
 HvZ/.project
-HvZ_phone/bin
-HvZ_phone/bin/*
-HvZ_phone/.classpath
-HvZ_phone/.project
+HvZ_p/bin
+HvZ_p/bin/*
+HvZ_p/.classpath
+HvZ_p/.project
