--- a/HvZ_p/AndroidManifest.xml
+++ b/HvZ_p/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="csci422.final_project"
     android:versionCode="1"
     android:versionName="1.0" >
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
     <uses-sdk android:minSdkVersion="8" />
 
