--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 .metadata/*
 HvZ/bin
 HvZ/bin/*
+HvZ/.settings
+HvZ/.settings/*
 HvZ/.classpath
 HvZ/.project
 HvZ_p/bin
 HvZ_p/bin/*
+HvZ_p/.settings
+HvZ_p/.settings/*
 HvZ_p/.classpath
 HvZ_p/.project
