--- a/HvZ_p/AndroidManifest.xml
+++ b/HvZ_p/AndroidManifest.xml
@@ -4,6 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-sdk android:minSdkVersion="8" />
 
@@ -11,6 +12,7 @@
         android:icon="@drawable/ic_hvz"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar" >
+        <uses-library android:name="com.google.android.maps" />
         <activity
             android:label="@string/app_name"
             android:name=".HvZ_Activity" >
