--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,15 @@ HvZ/.settings
 HvZ/.settings/*
 HvZ/.classpath
 HvZ/.project
+HvZ/gen
+HvZ/gen/*
+HvZ/project.properties
 HvZ_p/bin
 HvZ_p/bin/*
 HvZ_p/.settings
 HvZ_p/.settings/*
 HvZ_p/.classpath
 HvZ_p/.project
+HvZ_p/gen
+HvZ_p/gen/*
+HvZ_p/project.properties
