--- a/HvZ_p/AndroidManifest.xml
+++ b/HvZ_p/AndroidManifest.xml
@@ -10,8 +10,7 @@
 
     <application
         android:icon="@drawable/ic_hvz"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:label="@string/app_name">
         <uses-library android:name="com.google.android.maps" />
         <activity
             android:label="@string/app_name"
@@ -29,6 +28,10 @@
         <activity
             android:label="@string/report"
             android:name=".report" >
+        </activity>
+        <activity
+            android:label="@string/profile"
+            android:name=".profile" >
         </activity>
     </application>
 
