Cleaned up my code. Fixing naming conventions.

--- a/HvZ_p/AndroidManifest.xml
+++ b/HvZ_p/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
         <activity
             android:label="@string/profile"
-            android:name=".profile" >
+            android:name=".ProfileActivty" >
         </activity>
     </application>
 
