--- a/HvZ_p/AndroidManifest.xml
+++ b/HvZ_p/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0" >
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
 
     <uses-sdk android:minSdkVersion="8" />
 
@@ -35,7 +36,7 @@
         </activity>
         <activity
             android:label="@string/mini_map"
-            android:name=".MiniMap" >
+            android:name=".MiniMapActivity" >
         </activity>
     </application>
 
